assets/css/main.scss
---
---

@use 'base';
@use 'social';
@use 'header';
@use 'left-panel';

.main-container {
  display: flex;
  align-items: top;
  justify-content: space-between;

  @media (max-width: 768px) {
    flex-direction: column;
    text-align: center;
  }
}

article img {
  max-width: 100%;
  height: auto;
  display: block;
}

footer {
  text-align: center;
}

